# fyi

./: .gitignore  .righteous-sandbox.json  .rustfmt.toml  .travis.yml  CREDITS.html  CREDITS.md  Cargo.toml  README.md  about.toml  justfile
.github/workflows/: ci.yaml  msrv.yaml
fyi/: Cargo.toml  build.rs
fyi/completions/: fyi.bash
fyi/help/: confirm.txt  generic-bottom.txt  generic.txt  help.txt  print.txt
fyi/help/stock/: blank.txt
fyi/man/: fyi-blank.1  fyi-confirm.1  fyi-crunched.1  fyi-debug.1  fyi-done.1  fyi-error.1  fyi-help.1  fyi-info.1  fyi-notice.1  fyi-print.1  fyi-success.1  fyi-task.1  fyi-warning.1  fyi.1
fyi/src/: cli.rs  error.rs  main.rs  menu.rs
fyi_ansi/: Cargo.toml  README.md  build.rs
fyi_ansi/src/: lib.rs
fyi_bench/: Cargo.toml
fyi_bench/src/: lib.rs  macros.rs
fyi_bench/src/bench/: error.rs  history.rs  mod.rs  stats.rs
fyi_core/: Cargo.toml
fyi_core/benches/: civilization.rs  msg.rs  progress.rs  scratchpad.rs  util.rs  util_numbers.rs  util_paths.rs  util_strings.rs  util_time.rs
fyi_core/examples/: progress.rs
fyi_core/src/: error.rs  lib.rs  msg.rs  prefix.rs  progress.rs  witch.rs
fyi_core/src/misc/: cli.rs  mod.rs  numbers.rs  strings.rs  time.rs
fyi_core/src/traits/: ansi_bitsy.rs  inflection.rs  io.rs  mebi.rs  mod.rs  oxford_join.rs  shorty.rs  spacetime.rs  thousands.rs
fyi_core/src/traits/path/: format.rs  io.rs  misc.rs  mod.rs
fyi_core/src/traits/str/: format.rs  mod.rs
fyi_core/src/util/: cli.rs  mod.rs  numbers.rs  paths.rs  strings.rs  time.rs
fyi_core/src/witcher/: formats.rs  mass.rs  mod.rs  ops.rs  props.rs  walk.rs  witch.rs
fyi_menu/: Cargo.toml
fyi_menu/benches/: fm_arglist.rs  fm_argue.rs  fm_keykind.rs  fm_keymaster.rs  fm_lib.rs  fm_utility.rs
fyi_menu/examples/: bash.rs  basher.rs  man.rs
fyi_menu/skel/: basher.cond1.txt  basher.cond2.txt  basher.end.txt  basher.paths.txt  basher.subcmd.1.txt  basher.subcmd.2.txt  basher.subcmd.txt  basher.txt
fyi_menu/src/: agree.rs  arglist.rs  argue.rs  basher.rs  error.rs  keykind.rs  keymaster.rs  lib.rs  man.rs  utility.rs
fyi_menu/src/simd/: keymaster.rs  mod.rs
fyi_msg/: Cargo.toml  README.md  build.rs
fyi_msg/benches/: fm_ansi.rs  fm_ansi_code.rs  fm_buffer.rs  fm_buffer_mut.rs  fm_bufrange.rs  fm_bytes_saved.rs  fm_double_time.rs  fm_fitted.rs  fm_girth_ext.rs  fm_human_bytes.rs  fm_human_elapsed.rs  fm_msg.rs  fm_msg_fitted.rs  fm_msg_timestamps.rs  fm_msgbuf.rs  fm_nice_int.rs  fm_partitions.rs  fm_strip_ansi.rs  fm_timestamp.rs  fm_toc.rs  fm_utility.rs  fm_whitespace.rs  msg.rs
fyi_msg/examples/: _progless-data.txt  msg.rs  progless-par.rs  progless-serial.rs  progless-sigint.rs  progless.rs
fyi_msg/skel/: ansi256.rs
fyi_msg/src/: ansi.rs  bufrange.rs  fitted.rs  iter.rs  lib.rs  msg.rs  msgbuf.rs  nice_int.rs  partitions.rs  print.rs  printbuf.rs  printy_please.rs  progress.rs  timestamp.rs  toc.rs  traits.rs  utility.rs
fyi_msg/src/msg/: ansi.rs  buffer.rs  kind.rs  mod.rs  prefix.rs
fyi_msg/src/progress/: ba.rs  error.rs  guard.rs  mod.rs  signals.rs  steady.rs  task.rs
fyi_msg/src/simd/: mod.rs  toc.rs
fyi_msg/src/traits/: ansi_code.rs  bytes_saved.rs  double_time.rs  fast_concat.rs  girth_ext.rs  human_bytes.rs  human_elapsed.rs  mod.rs  printable.rs  strip_ansi.rs  whitespace.rs
fyi_num/: Cargo.toml
fyi_num/benches/: fn_nice_elapsed.rs  fn_nice_int.rs  fn_nice_percent.rs  fn_nice_u16.rs  fn_nice_u32.rs  fn_nice_u64.rs  fn_nice_u8.rs
fyi_num/src/: lib.rs
fyi_num/src/nice_ansi/: mod.rs
fyi_num/src/nice_elapsed/: mod.rs
fyi_num/src/nice_int/: mod.rs  nice_percent.rs  nice_u16.rs  nice_u32.rs  nice_u64.rs  nice_u8.rs
fyi_progress/: Cargo.toml
fyi_progress/benches/: fp_lapsed.rs  fp_nice_elapsed.rs  fp_nice_int.rs  fp_niceint.rs  fp_progress.rs  fp_utility.rs
fyi_progress/examples/: progress.rs
fyi_progress/src/: lapsed.rs  lib.rs  nice_elapsed.rs  nice_int.rs  niceint.rs  printbuf.rs  progress.rs  utility.rs
fyi_progress/src/traits/: fitted_range.rs  mod.rs  progress_task.rs
fyi_progress/src/utility/: mod.rs  time.rs
fyi_witch/: Cargo.toml
fyi_witch/benches/: witch.rs
fyi_witch/src/: lib.rs  witch.rs
fyi_witch/src/traits/: io.rs  mod.rs
fyi_witch/tests/assets/: is-executable.sh
fyi_witcher/: Cargo.toml
fyi_witcher/benches/: fw_nice_elapsed.rs  fw_nice_int.rs  fw_utility.rs  fw_witcher.rs  fw_witcher_filtered.rs
fyi_witcher/examples/: walk-and-count.rs  witch.rs  witcher.rs
fyi_witcher/src/: lib.rs  lite.rs  nice_elapsed.rs  nice_int.rs  utility.rs  witch.rs  witcher.rs  witching.rs  witchio.rs
fyi_witcher/src/traits/: fitted_range.rs  io.rs  mod.rs
fyi_witcher/src/witcher/: matcher.rs  mod.rs  witch.rs
fyi_witcher/tests/links/: 07
fyi_witcher/tests/links/06/: 10
release/completions/: fyi.bash
release/credits/: about.hbs
release/man/: fyi-aborted.1  fyi-blank.1  fyi-confirm.1  fyi-crunched.1  fyi-debug.1  fyi-done.1  fyi-error.1  fyi-found.1  fyi-help.1  fyi-info.1  fyi-notice.1  fyi-print.1  fyi-review.1  fyi-skipped.1  fyi-success.1  fyi-task.1  fyi-warning.1  fyi.1
release/skel/: control
skel/: ansi256.rs
