[package]
name = "fyi"
version = "0.2.5"
license = "WTFPL"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "A dead-simple CLI status message printer for use in BASH scripts, etc."
repository = "https://github.com/Blobfolio/fyi"
publish = false

[package.metadata.deb]
maintainer = "Blobfolio, LLC. <hello@blobfolio.com>"
copyright = "2020, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "2"
depends = "$auto"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/fyi", "usr/bin/", "755"],
    ["./completions/fyi.bash", "etc/bash_completion.d/", "644"],
    ["./man/fyi.1.gz", "usr/share/man/man1/", "644"],
]

[dependencies.fyi_menu]
path = "../fyi_menu"

[dependencies.fyi_msg]
path = "../fyi_msg"
