[package]
name = "fyi"
version = "0.3.8"
license = "WTFPL"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "A dead-simple CLI status message printer for use in BASH scripts, etc."
repository = "https://github.com/Blobfolio/fyi"
publish = false

[package.metadata.deb]
maintainer = "Blobfolio, LLC. <hello@blobfolio.com>"
copyright = "2020, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/fyi", "usr/bin/", "755"],
    ["../release/completions/fyi.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/fyi.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-confirm.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-debug.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-error.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-info.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-print.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-task.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-blank.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-crunched.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-done.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-help.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-notice.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-success.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-warning.1.gz", "usr/share/man/man1/", "644"],
]

[dependencies.fyi_menu]
path = "../fyi_menu"
default-features = false
features = []

[dependencies.fyi_msg]
path = "../fyi_msg"
