[package]
name = "fyi"
version = "2.3.1"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "A dead-simple CLI status message printer for use in BASH scripts, etc."
repository = "https://github.com/Blobfolio/fyi"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <josh@blobfolio.com>"
copyright = "2025, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
extended-description = ""
depends = "$auto"
section = "utils"
assets = [
    ["../target/release/fyi", "usr/bin/", "755"],
    ["../release/completions/fyi.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/fyi.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-aborted.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-blank.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-confirm.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-crunched.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-debug.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-done.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-error.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-found.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-info.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-notice.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-print.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-review.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-skipped.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-success.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-task.1.gz", "usr/share/man/man1/", "644"],
    ["../release/man/fyi-warning.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "FYI"
bash-dir = "../release/completions"
man-dir = "../release/man"
credits-dir = "../"

[[package.metadata.bashman.subcommands]]
cmd = "aborted"
description="Aborted: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "blank"
description="Print blank line(s)."

[[package.metadata.bashman.subcommands]]
cmd = "confirm"
description='Ask a Yes/No question using the built-in prefix "confirm".'

[[package.metadata.bashman.subcommands]]
cmd = "print"
description="Print a message without a prefix (or with a custom one)."

[[package.metadata.bashman.subcommands]]
cmd = "crunched"
description="Crunched: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "debug"
description="Debug: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "done"
description="Done: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "error"
description="Error: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "found"
description="Found: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "info"
description="Info: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "notice"
description="Notice: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "review"
description="Review: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "skipped"
description="Skipped: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "success"
description="Success: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "task"
description="Task: Hello World"

[[package.metadata.bashman.subcommands]]
cmd = "warning"
description="Warning: Hello World"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."
subcommands = [ "", "blank", "confirm", "print", "aborted", "crunched", "debug", "done", "error", "found", "info", "notice", "review", "skipped", "success", "task", "warning" ]

[[package.metadata.bashman.switches]]
short = "-i"
long = "--indent"
description = "Indent the line."
subcommands = [ "confirm", "print", "aborted", "crunched", "debug", "done", "error", "found", "info", "notice", "review", "skipped", "success", "task", "warning" ]

[[package.metadata.bashman.switches]]
long = "--stderr"
description = "Print to STDERR instead of STDOUT."
subcommands = [ "blank", "print", "aborted", "crunched", "debug", "done", "error", "found", "info", "notice", "review", "skipped", "success", "task", "warning" ]

[[package.metadata.bashman.switches]]
short = "-t"
long = "--timestamp"
description = "Include a timestamp."
subcommands = [ "confirm", "print", "aborted", "crunched", "debug", "done", "error", "found", "info", "notice", "review", "skipped", "success", "task", "warning" ]

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version."

[[package.metadata.bashman.switches]]
short = "-y"
long = "--yes"
description = "Default yes (rather than no)."
subcommands = [ "confirm" ]

[[package.metadata.bashman.options]]
short = "-c"
long = "--count"
description = "Number of empty lines to print. [default: 1]"
label = "<NUM>"
path = false
subcommands = [ "blank" ]

[[package.metadata.bashman.options]]
short = "-e"
long = "--exit"
description = "Exit with this code (0-255) after printing. [default: 0]"
label = "<NUM>"
path = false
subcommands = [ "print", "aborted", "crunched", "debug", "done", "error", "found", "info", "notice", "review", "skipped", "success", "task", "warning" ]

[[package.metadata.bashman.options]]
short = "-c"
long = "--prefix-color"
description = "Use this color for the prefix. [default: 199]"
label = "<NUM>"
path = false
subcommands = [ "print" ]

[[package.metadata.bashman.options]]
short = "-p"
long = "--prefix"
description = "Set a custom prefix. [default: ]"
label = "<PREFIX>"
path = false
subcommands = [ "print" ]

[[package.metadata.bashman.arguments]]
label = "<MSG>"
description = "The message!"
subcommands = [ "confirm", "print", "aborted", "crunched", "debug", "done", "error", "found", "info", "notice", "review", "skipped", "success", "task", "warning" ]

[build-dependencies]
argyle = "0.13.*"

[build-dependencies.fyi_ansi]
path = "../fyi_ansi"

[build-dependencies.fyi_msg]
features = [ "bin_kinds", "timestamps" ]
path = "../fyi_msg"

[dependencies]
argyle = "0.13.*"
dactyl = "0.13.*"

[dependencies.fyi_ansi]
path = "../fyi_ansi"

[dependencies.fyi_msg]
path = "../fyi_msg"
features = [ "bin_kinds", "timestamps" ]
