[package]
name = "fyi_core"
version = "0.1.3"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "FYI is a dead-simple status message printer for CLI use applications."
publish = false

[dependencies]
bytes = "0.5.*"
bytecount = "0.6.*"
chrono = "0.4.*"
itoa = "0.4.*"
lazy_static = "1.4.*"
num-traits = "0.2.*"
num-format = "0.4.*"
regex = "1.3.*"
term_size = "0.3.*"
thiserror = "1.0.*"

[dependencies.casual]
version = "0.1.*"
optional = true

[dependencies.jwalk]
version = "*"
optional = true

[dependencies.nix]
version = "0.16.*"
optional = true

[dependencies.rayon]
version = "1.3.*"
optional = true

[dependencies.tempfile]
version = "3.1.*"
optional = true

[dependencies.tempfile-fast]
version = "0.3.*"
optional = true

[features]
default = []
interactive = [ "casual" ]
progress = []
witcher = [ "jwalk", "nix", "rayon", "tempfile", "tempfile-fast" ]

[dev-dependencies]
criterion = "*"

[[bench]]
name = "civilization"
harness = false

[[bench]]
name = "msg"
harness = false

[[bench]]
name = "scratchpad"
harness = false

[[bench]]
name = "util"
harness = false
