[package]
name = "fyi_core"
version = "0.1.4"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "FYI is a dead-simple status message printer for CLI use applications."
publish = false

[dependencies]
bytecount = "0.6.*"
bytes = "0.5.*"
chrono = "0.4.*"
itoa = "0.4.*"
lazy_static = "1.4.*"
num-format = "0.4.*"
num-traits = "0.2.*"
regex = "1.3.*"
term_size = "0.3.*"

[dependencies.casual]
version = "0.1.*"
optional = true

[features]
default = []
interactive = [ "casual" ]
progress = []

[dev-dependencies]
criterion = "*"
rayon = "*"

[[bench]]
name = "civilization"
harness = false

[[bench]]
name = "msg"
harness = false

[[bench]]
name = "progress"
harness = false

[[bench]]
name = "util"
harness = false

[[example]]
name = "progress"
