[package]
name = "fyi_menu"
version = "0.6.1"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "CLI argument parsing helpers."
license = "WTFPL"
repository = "https://github.com/Blobfolio/fyi"
publish = false

[dependencies.fyi_msg]
path = "../fyi_msg"

[dev-dependencies.fyi_bench]
path = "../fyi_bench"

[[bench]]
name = "fm_keykind"
harness = false
