[package]
name = "fyi_msg"
version = "0.10.8"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2021"
rust-version = "1.70"
description = "Simple ANSI-formatted, prefixed messages for console printing."
license = "WTFPL"
repository = "https://github.com/Blobfolio/fyi"
readme = "README.md"
exclude = [ "examples" ]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
features = [ "fitted", "progress", "timestamps" ]
default-target = "x86_64-unknown-linux-gnu"
targets = [ "x86_64-unknown-linux-gnu", "x86_64-apple-darwin" ]

[dependencies]
dactyl = "0.5.*"

[dependencies.ahash]
version = "0.8.*"
default-features = false
optional = true

[dependencies.bytecount]
version = "=0.6.3"
optional = true

[dependencies.term_size]
version = "=0.3.2"
optional = true

[dependencies.unicode-width]
version = "0.1.*"
optional = true

[dependencies.utc2k]
version = "0.6.*"
features = [ "local" ]
optional = true

[dev-dependencies]
brunch = "0.5.*"
rayon = "1.7.*"

[[bench]]
name = "fm_buffer"
harness = false

[[bench]]
name = "fm_buffer_mut"
harness = false

[[bench]]
name = "fm_fitted"
harness = false
required-features = [ "fitted" ]

[[bench]]
name = "fm_msg"
harness = false

[[bench]]
name = "fm_msg_fitted"
harness = false
required-features = [ "fitted" ]

[[bench]]
name = "fm_msg_timestamps"
harness = false
required-features = [ "timestamps" ]

[features]
default = []

# This adds a few additional MsgKinds relevant only to the main FYI binary.
# There is no point enabling this in other crates.
bin_kinds = []

# Add width-fitting support to the Msg struct, i.e. Msg.fitted().
fitted = [ "unicode-width" ]

# Make use of the "progless" bar.
progress = [ "ahash", "bytecount", "fitted", "term_size" ]

# Add timestamp support to messages.
timestamps = [ "utc2k" ]
