[package]
name = "fyi_msg"
version = "2.3.0"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.88"
description = "Simple ANSI-formatted, prefixed messages for console printing."
license = "WTFPL"
repository = "https://github.com/Blobfolio/fyi"
readme = "README.md"
exclude = [ "examples" ]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
features = [ "fitted", "progress", "signals", "timestamps" ]
default-target = "x86_64-unknown-linux-gnu"
targets = [ "x86_64-unknown-linux-gnu", "x86_64-apple-darwin" ]

[dependencies.dactyl]
version = "0.13.*"
optional = true

[dependencies.fyi_ansi]
version = "2.2.*"
path = "../fyi_ansi"

[dependencies.signal-hook]
version = "0.3.*"
default-features = false
optional = true

[dependencies.terminal_size]
version = "0.4.*"
optional = true

[dependencies.unicode-width]
version = "0.2.*"
optional = true

[dependencies.utc2k]
version = "0.15.*"
features = [ "local" ]
optional = true

[dev-dependencies]
brunch = "0.11.*"
rayon = "1.10.*"

[[bench]]
name = "fm_ansi"
harness = false

[[bench]]
name = "fm_fitted"
harness = false
required-features = [ "fitted" ]

[[bench]]
name = "fm_msg"
harness = false

[[bench]]
name = "fm_msg_fitted"
harness = false
required-features = [ "fitted" ]

[[bench]]
name = "fm_msg_timestamps"
harness = false
required-features = [ "timestamps" ]

[features]

# This library's features are opt-in.
default = []

# Add width-fitting support to the Msg struct, i.e. Msg.fitted().
fitted = [ "unicode-width" ]

# Add timestamp support to the Msg struct.
timestamps = [ "utc2k" ]

# Enable the Progless struct, a Msg-like progress bar.
progress = [ "dactyl", "fitted", "terminal_size" ]

# ADVANCED: Add SIGWINCH signal support to the Progless struct, reducing
# resize-related latency.
#
# NOT recommended for general use.
signals_sigwinch = [ "progress", "signal-hook" ]

# ADVANCED: Add SIGINT signal support to the Progless struct, allowing some
# quick cleanup/restoration to be sneaked in before premature termination.
# (This makes possible subtle UI improvements like hiding the cursor during
# progress render.)
#
# This necessarily replaces the default SIGINT-handling behaviors, so should
# NOT be used in projects that implement their own handling.
#
# NOT recommended for general use.
signals_sigint = [ "progress", "signal-hook" ]

# ADVANCED: Enable all signal features.
#
# NOT recommended for general use.
signals = [ "signals_sigint", "signals_sigwinch" ]

# INTERNAL: used by the accompanying "fyi" binary.
bin_kinds = []
