[package]
name = "fyi_num"
version = "0.5.3"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "Number helpers."
license = "WTFPL"
repository = "https://github.com/Blobfolio/fyi"
publish = false

[dependencies]
num-integer = "0.1.*"

[dev-dependencies]
criterion = "*"
num-format = "0.4.*"
rand = "*"

[[bench]]
name = "fn_nice_elapsed"
harness = false

[[bench]]
name = "fn_nice_int"
harness = false
