[package]
name = "fyi_num"
version = "0.6.1"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "Number helpers."
license = "WTFPL"
repository = "https://github.com/Blobfolio/fyi"
publish = false

[dependencies]
num-integer = "0.1.*"

[dev-dependencies]
num-format = "0.4.*"
rand = "*"

[dev-dependencies.brunch]
git = "https://github.com/Blobfolio/brunch.git"

[[bench]]
name = "fn_nice_elapsed"
harness = false

[[bench]]
name = "fn_nice_percent"
harness = false

[[bench]]
name = "fn_nice_u8"
harness = false

[[bench]]
name = "fn_nice_u16"
harness = false

[[bench]]
name = "fn_nice_u32"
harness = false

[[bench]]
name = "fn_nice_u64"
harness = false
