[package]
name = "fyi_progress"
version = "0.2.1"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "FYI is a dead-simple status message printer for CLI use applications."
publish = false

[dependencies]
bitflags = "1.2.*"
indexmap = "1.3.*"
itoa = "0.4.*"
memchr = "2.3.*"
num-format = "0.4.*"
num-integer = "0.1.*"
seahash = "4.0.*"
term_size = "0.3.*"
unicode-width = "0.1.*"

[dependencies.fyi_msg]
path = "../fyi_msg"

[features]
default = []
bench_sink = []

[dev-dependencies]
criterion = "*"
rayon = "*"

[[bench]]
name = "fp_niceint"
harness = false

[[bench]]
name = "fp_progress"
harness = false

[[bench]]
name = "fp_utility"
harness = false

[[example]]
name = "progress"
