[package]
name = "fyi_progress"
version = "0.2.9"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "FYI is a dead-simple status message printer for CLI use applications."
publish = false

[dependencies]
ahash = "0.4.*"
itoa = "0.4.*"
num_cpus = "1.13.*"
num-format = "0.4.*"
num-integer = "0.1.*"
rayon = "1.3.*"
term_size = "0.3.*"
unicode-width = "0.1.*"

[dependencies.bytecount]
version = "0.6.*"
default-features = false
features = [ "runtime-dispatch-simd" ]

[dependencies.fyi_msg]
path = "../fyi_msg"

[features]
default = []
bench_sink = []

[dev-dependencies]
criterion = "*"
rayon = "*"

[[bench]]
name = "fp_nice_elapsed"
harness = false

[[bench]]
name = "fp_nice_int"
harness = false

[[bench]]
name = "fp_utility"
harness = false

[[example]]
name = "progress"
