[package]
name = "fyi_witch"
version = "0.1.7"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "FYI is a dead-simple status message printer for CLI use applications."
publish = false

[dependencies]
jwalk = "0.5.*"
nix = "0.16.*"
rayon = "1.3.*"
regex = "1.3.*"
tempfile = "3.1.*"
tempfile-fast = "0.3.*"

[dependencies.fyi_core]
path = "../fyi_core"
default-features = false
features = [ "progress" ]

[dev-dependencies]
criterion = "*"

[[bench]]
name = "witch"
harness = false
