[package]
name = "fyi_witcher"
version = "0.6.0"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "Path traversal helpers."
license = "WTFPL"
repository = "https://github.com/Blobfolio/fyi"
publish = false

[dependencies]
ahash = "0.7.*"
rayon = "1.5.*"

[dependencies.bytecount]
version = "0.6.*"
optional = true

[dependencies.fyi_msg]
path = "../fyi_msg"
optional = true
features = [ "fitted" ]

[dependencies.fyi_num]
path = "../fyi_num"
optional = true

[dependencies.num-integer]
version = "0.1.*"
optional = true

[dependencies.regex]
version = "1.4.*"
optional = true

[dependencies.term_size]
version = "0.3.*"
optional = true

[dev-dependencies.criterion]
version = ">= 0.3.4"
default-features = false

[[bench]]
name = "fw_utility"
harness = false

[[bench]]
name = "fw_witcher"
harness = false

[[bench]]
name = "fw_witcher_filtered"
harness = false

[[example]]
name = "witch"

[[example]]
name = "witcher"

[features]
# Enable Regex matching in Witcher.
regexp = [ "regex" ]

# Enable the Witching progress bar.
witching = [ "bytecount", "fyi_msg", "fyi_num", "num-integer", "term_size" ]
