[package]
name = "fyi_witcher"
version = "0.6.3"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "Path traversal helpers."
license = "WTFPL"
repository = "https://github.com/Blobfolio/fyi"
publish = false

[dependencies]
ahash = "0.7.*"
rayon = "1.5.*"

[dependencies.regex]
version = "1.4.*"
optional = true

[dev-dependencies]
brunch = "0.1.*"

[[bench]]
name = "fw_witcher"
harness = false

[[bench]]
name = "fw_witcher_filtered"
harness = false

[[example]]
name = "witch"

[[example]]
name = "witcher"

[features]
# Enable Regex matching in Witcher.
regexp = [ "regex" ]
